--- a/Basic_Pipeline.ipynb
+++ b/Basic_Pipeline.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQRxkXxj49bsBJIMxnbFDD",
+      "authorship_tag": "ABX9TyM4xp93addsqi/JLFXD9ykI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "SYPQfYOMZ_KC"
       },
@@ -78,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ZyTD_JJbHSP",
-        "outputId": "f96fa4a6-eb7d-49a6-93af-72d969e1c30a"
+        "outputId": "35f9b13c-7b66-4f96-ea51-b872dcfaf317"
       },
       "execution_count": 2,
       "outputs": [
@@ -86,7 +86,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "t05K05PfqCPG"
       },
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -133,9 +133,9 @@
           "height": 221
         },
         "id": "n9JTYsVksSM4",
-        "outputId": "79903fc4-3d96-4647-b612-42d1f1048138"
+        "outputId": "c4ff9f58-cf41-4182-fb2b-eea8ba38cf3d"
       },
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-707f7dd7-ef9c-470d-bc46-6f03ccf4815b\">\n",
+              "  <div id=\"df-4a285bfa-5727-46da-a77f-b10962a43a1a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -283,7 +283,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-707f7dd7-ef9c-470d-bc46-6f03ccf4815b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a285bfa-5727-46da-a77f-b10962a43a1a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -334,12 +334,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-707f7dd7-ef9c-470d-bc46-6f03ccf4815b button.colab-df-convert');\n",
+              "          document.querySelector('#df-4a285bfa-5727-46da-a77f-b10962a43a1a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-707f7dd7-ef9c-470d-bc46-6f03ccf4815b');\n",
+              "          const element = document.querySelector('#df-4a285bfa-5727-46da-a77f-b10962a43a1a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -362,7 +362,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 4
         }
       ]
     },
@@ -377,9 +377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taL1nN54uriK",
-        "outputId": "066e1928-fb6f-4ea1-b544-f9a89b46ff6b"
+        "outputId": "1380dde1-cf98-4732-c0e4-761c80420d18"
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,9 +420,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6dnKpJCTvg25",
-        "outputId": "477f458a-570c-4c1d-c7d9-f06a47f9eaf8"
+        "outputId": "73073dba-5d08-4444-c71e-84a0fb82cd45"
       },
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +447,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 6
         }
       ]
     },
@@ -464,29 +464,29 @@
           "height": 173
         },
         "id": "SRSTOrVNwJHG",
-        "outputId": "a2ee701c-7e0f-4941-a1d1-19f61e260fe2"
+        "outputId": "3dac3ba5-e9f8-4945-9425-7ce42be1bb09"
       },
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "      B01     B06     B11     B07     B05     B03     B09     B12     B8A  \\\n",
-              "0  0.0121  0.1210  0.1029  0.1366  0.0603  0.0338  0.1531  0.0538  0.1508   \n",
-              "1  0.0170  0.1392  0.1671  0.1553  0.0881  0.0462  0.1764  0.1046  0.1759   \n",
-              "2  0.0202  0.1308  0.1318  0.1462  0.0802  0.0444  0.1608  0.0748  0.1588   \n",
-              "3  0.0191  0.1189  0.1240  0.1332  0.0705  0.0399  0.1473  0.0743  0.1460   \n",
+              "0  0.0102  0.1393  0.1208  0.1634  0.0812  0.0324  0.2017  0.0617  0.1982   \n",
+              "1  0.0098  0.1121  0.0939  0.1311  0.0539  0.0261  0.1473  0.0513  0.1480   \n",
+              "2  0.0071  0.0733  0.0501  0.0818  0.0476  0.0276  0.0907  0.0274  0.0844   \n",
+              "3  0.0268  0.1769  0.1773  0.2008  0.1029  0.0476  0.2199  0.1031  0.2207   \n",
               "\n",
               "      B04     B08     B02  Class  \n",
-              "0  0.0245  0.1443  0.0203      1  \n",
-              "1  0.0478  0.1694  0.0327      1  \n",
-              "2  0.0408  0.1527  0.0302      1  \n",
-              "3  0.0382  0.1414  0.0287      1  "
+              "0  0.0351  0.1846  0.0193      1  \n",
+              "1  0.0209  0.1397  0.0144      1  \n",
+              "2  0.0249  0.0827  0.0168      1  \n",
+              "3  0.0484  0.2086  0.0337      1  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d262701e-5128-447c-9a2c-126456ed597d\">\n",
+              "  <div id=\"df-236b3948-52f9-4b90-a9f0-1f47771894a8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -524,72 +524,72 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0.0121</td>\n",
-              "      <td>0.1210</td>\n",
-              "      <td>0.1029</td>\n",
-              "      <td>0.1366</td>\n",
-              "      <td>0.0603</td>\n",
-              "      <td>0.0338</td>\n",
-              "      <td>0.1531</td>\n",
-              "      <td>0.0538</td>\n",
-              "      <td>0.1508</td>\n",
-              "      <td>0.0245</td>\n",
-              "      <td>0.1443</td>\n",
-              "      <td>0.0203</td>\n",
+              "      <td>0.0102</td>\n",
+              "      <td>0.1393</td>\n",
+              "      <td>0.1208</td>\n",
+              "      <td>0.1634</td>\n",
+              "      <td>0.0812</td>\n",
+              "      <td>0.0324</td>\n",
+              "      <td>0.2017</td>\n",
+              "      <td>0.0617</td>\n",
+              "      <td>0.1982</td>\n",
+              "      <td>0.0351</td>\n",
+              "      <td>0.1846</td>\n",
+              "      <td>0.0193</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.0170</td>\n",
-              "      <td>0.1392</td>\n",
-              "      <td>0.1671</td>\n",
-              "      <td>0.1553</td>\n",
-              "      <td>0.0881</td>\n",
-              "      <td>0.0462</td>\n",
-              "      <td>0.1764</td>\n",
-              "      <td>0.1046</td>\n",
-              "      <td>0.1759</td>\n",
-              "      <td>0.0478</td>\n",
-              "      <td>0.1694</td>\n",
-              "      <td>0.0327</td>\n",
+              "      <td>0.0098</td>\n",
+              "      <td>0.1121</td>\n",
+              "      <td>0.0939</td>\n",
+              "      <td>0.1311</td>\n",
+              "      <td>0.0539</td>\n",
+              "      <td>0.0261</td>\n",
+              "      <td>0.1473</td>\n",
+              "      <td>0.0513</td>\n",
+              "      <td>0.1480</td>\n",
+              "      <td>0.0209</td>\n",
+              "      <td>0.1397</td>\n",
+              "      <td>0.0144</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.0202</td>\n",
-              "      <td>0.1308</td>\n",
-              "      <td>0.1318</td>\n",
-              "      <td>0.1462</td>\n",
-              "      <td>0.0802</td>\n",
-              "      <td>0.0444</td>\n",
-              "      <td>0.1608</td>\n",
-              "      <td>0.0748</td>\n",
-              "      <td>0.1588</td>\n",
-              "      <td>0.0408</td>\n",
-              "      <td>0.1527</td>\n",
-              "      <td>0.0302</td>\n",
+              "      <td>0.0071</td>\n",
+              "      <td>0.0733</td>\n",
+              "      <td>0.0501</td>\n",
+              "      <td>0.0818</td>\n",
+              "      <td>0.0476</td>\n",
+              "      <td>0.0276</td>\n",
+              "      <td>0.0907</td>\n",
+              "      <td>0.0274</td>\n",
+              "      <td>0.0844</td>\n",
+              "      <td>0.0249</td>\n",
+              "      <td>0.0827</td>\n",
+              "      <td>0.0168</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.0191</td>\n",
-              "      <td>0.1189</td>\n",
-              "      <td>0.1240</td>\n",
-              "      <td>0.1332</td>\n",
-              "      <td>0.0705</td>\n",
-              "      <td>0.0399</td>\n",
-              "      <td>0.1473</td>\n",
-              "      <td>0.0743</td>\n",
-              "      <td>0.1460</td>\n",
-              "      <td>0.0382</td>\n",
-              "      <td>0.1414</td>\n",
-              "      <td>0.0287</td>\n",
+              "      <td>0.0268</td>\n",
+              "      <td>0.1769</td>\n",
+              "      <td>0.1773</td>\n",
+              "      <td>0.2008</td>\n",
+              "      <td>0.1029</td>\n",
+              "      <td>0.0476</td>\n",
+              "      <td>0.2199</td>\n",
+              "      <td>0.1031</td>\n",
+              "      <td>0.2207</td>\n",
+              "      <td>0.0484</td>\n",
+              "      <td>0.2086</td>\n",
+              "      <td>0.0337</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d262701e-5128-447c-9a2c-126456ed597d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-236b3948-52f9-4b90-a9f0-1f47771894a8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -640,12 +640,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d262701e-5128-447c-9a2c-126456ed597d button.colab-df-convert');\n",
+              "          document.querySelector('#df-236b3948-52f9-4b90-a9f0-1f47771894a8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d262701e-5128-447c-9a2c-126456ed597d');\n",
+              "          const element = document.querySelector('#df-236b3948-52f9-4b90-a9f0-1f47771894a8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -668,7 +668,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 7
         }
       ]
     },
@@ -694,7 +694,7 @@
       "metadata": {
         "id": "8KMcPWxew4V8"
       },
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -731,10 +731,10 @@
         "  This function replaces the infinity values with Nan then replaces that with new infinity values\n",
         "  \"\"\"\n",
         "  #Replace infinity values with Nan\n",
-        "  df = df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+        "  df.replace([np.inf, -np.inf], np.NAN, inplace=True)\n",
         "\n",
-        "  #Fill in infinity values\n",
-        "  df = df.fillna(999, inplace=True)\n",
+        "  #Fill in null values\n",
+        "  df.fillna(999, inplace=True)\n",
         "\n",
         "  return df\n",
         "\n",
@@ -756,7 +756,7 @@
       "metadata": {
         "id": "0RsWyU48mqy2"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -773,7 +773,7 @@
       "metadata": {
         "id": "QHCIIo7enl5R"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -783,14 +783,52 @@
         "model_1 = Pipeline([('preprocessing', preprocess),\n",
         "                    ('RFC', RandomForestClassifier(random_state = 123))])\n",
         "\n",
-        "model_1 = Pipeline([('preprocessing', preprocess),\n",
+        "model_2 = Pipeline([('preprocessing', preprocess),\n",
+        "                    ('features', feature_union),\n",
         "                    ('RFC', RandomForestClassifier(random_state = 123))])"
       ],
       "metadata": {
         "id": "rGMhuMOAobAE"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fit pipes to check which is best\n",
+        "pipes = [model_1, model_2]\n",
+        "\n",
+        "for pipe in pipes:\n",
+        "  pipe.fit(X_train, y_train)\n",
+        "\n",
+        "#compare accuracies \n",
+        "\n",
+        "#make dictionary\n",
+        "pipe_dict = {0: 'No Feature Union', 1: 'With Feature Union'}\n",
+        "\n",
+        "#create for loop to find scores\n",
+        "for i, model in enumerate(pipes):\n",
+        "    print('{} Test Accuracy: {}'.format(pipe_dict[i], model.score(X_test, y_test)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0X_2TQXWynva",
+        "outputId": "3a200ea0-5941-4533-c49d-08f0bc39b250"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No Feature Union Test Accuracy: 0.6142133333333333\n",
+            "With Feature Union Test Accuracy: 0.5788622222222222\n"
+          ]
+        }
+      ]
     }
   ]
 }
