--- a/Basic_Pipeline.ipynb
+++ b/Basic_Pipeline.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyM59ZAIAex1xAPi2qVKMlBj",
+      "authorship_tag": "ABX9TyOa0Vce5JcBKAgGm5D/Vak7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1138,7 +1138,7 @@
         "\n",
         "model_3 = Pipeline([('preprocessing', preprocess),\n",
         "                    ('pca', PCA(n_components=6)),\n",
-        "                    ('XGB', RandomForestClassifier(random_state = 123))])"
+        "                    ('RFC', RandomForestClassifier(random_state = 123))])"
       ],
       "metadata": {
         "id": "rGMhuMOAobAE"
@@ -1203,7 +1203,7 @@
         "                    ('RFC', RandomForestClassifier(random_state = 123))])\n",
         "\n",
         "xgb_pipe = Pipeline([('preprocessing', preprocess),\n",
-        "                    ('RFC', XGBClassifier(random_state = 123))])"
+        "                    ('XGB', XGBClassifier(random_state = 123))])"
       ],
       "metadata": {
         "id": "jZASfAAwsZyL"
@@ -1229,11 +1229,11 @@
         "    print('{} Test Accuracy: {}'.format(pipe_dict[i], model.score(X_test, y_test)))"
       ],
       "metadata": {
-        "id": "QQCNRxdMsyP_",
-        "outputId": "1a8c06df-8a28-4e50-ed5d-2e6dbdc2ef47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QQCNRxdMsyP_",
+        "outputId": "1a8c06df-8a28-4e50-ed5d-2e6dbdc2ef47"
       },
       "execution_count": 14,
       "outputs": [
