--- a/Basic_Pipeline.ipynb
+++ b/Basic_Pipeline.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMHGs2q8FfYfcQTRCv191p+",
+      "authorship_tag": "ABX9TyMYxLmCaKWs/OrWbEf26iQo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,6 @@
         "import numpy as np\n",
         "import copy\n",
         "import pickle\n",
-        "import cloudpickle\n",
         "\n",
         "#Sklearn - Pipelines, Training\n",
         "from sklearn.pipeline import Pipeline, FeatureUnion\n",
@@ -81,7 +80,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ZyTD_JJbHSP",
-        "outputId": "022ac9f8-ef3b-4198-c67b-a38571ed0fd2"
+        "outputId": "2ba4eeca-ada1-42f7-b40d-2ade0c8b22f2"
       },
       "execution_count": 2,
       "outputs": [
@@ -136,7 +135,7 @@
           "height": 221
         },
         "id": "n9JTYsVksSM4",
-        "outputId": "b9abcc9c-128d-4a3f-e6bd-97611af79398"
+        "outputId": "8fb14d9e-53c7-4c1e-b7ae-2ff423adcc09"
       },
       "execution_count": 4,
       "outputs": [
@@ -167,7 +166,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5f6650e4-3b41-4d1c-8283-fbcf20f0c112\">\n",
+              "  <div id=\"df-eb31e634-f17c-4db5-917a-a50ae6f8d265\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -286,7 +285,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5f6650e4-3b41-4d1c-8283-fbcf20f0c112')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eb31e634-f17c-4db5-917a-a50ae6f8d265')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -337,12 +336,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5f6650e4-3b41-4d1c-8283-fbcf20f0c112 button.colab-df-convert');\n",
+              "          document.querySelector('#df-eb31e634-f17c-4db5-917a-a50ae6f8d265 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5f6650e4-3b41-4d1c-8283-fbcf20f0c112');\n",
+              "          const element = document.querySelector('#df-eb31e634-f17c-4db5-917a-a50ae6f8d265');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -380,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "taL1nN54uriK",
-        "outputId": "e57dd36e-0505-4507-bb4a-eea8231d8b16"
+        "outputId": "59101257-3928-4774-fb52-a0ec83e2a701"
       },
       "execution_count": 5,
       "outputs": [
@@ -423,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6dnKpJCTvg25",
-        "outputId": "a54d4648-77cc-421e-9bec-1e9ed59315f1"
+        "outputId": "59e6ab13-77b9-4481-b846-eaccdc871bc8"
       },
       "execution_count": 6,
       "outputs": [
@@ -467,7 +466,7 @@
           "height": 173
         },
         "id": "SRSTOrVNwJHG",
-        "outputId": "ca4a3113-be31-4013-ffe5-173f3d3b4a6f"
+        "outputId": "ab63ca3c-060b-4125-dd14-0e5f69b5b151"
       },
       "execution_count": 7,
       "outputs": [
@@ -476,20 +475,20 @@
           "data": {
             "text/plain": [
               "      B01     B06     B11     B07     B05     B03     B09     B12     B8A  \\\n",
-              "0  0.0070  0.1489  0.1105  0.1698  0.0726  0.0368  0.1884  0.0554  0.1860   \n",
-              "1  0.0220  0.1342  0.1121  0.1552  0.0678  0.0364  0.1849  0.0606  0.1715   \n",
-              "2  0.0078  0.1041  0.0810  0.1176  0.0499  0.0260  0.1347  0.0421  0.1301   \n",
-              "3  0.0124  0.1512  0.1283  0.1726  0.0845  0.0367  0.1936  0.0707  0.1981   \n",
+              "0  0.0083  0.1495  0.1162  0.1744  0.0837  0.0307  0.2035  0.0622  0.2039   \n",
+              "1  0.0156  0.1344  0.0986  0.1516  0.0726  0.0374  0.1633  0.0532  0.1664   \n",
+              "2  0.0178  0.1115  0.1595  0.1368  0.0771  0.0339  0.1763  0.0952  0.1741   \n",
+              "3  0.0262  0.1883  0.1512  0.2120  0.0973  0.0516  0.2361  0.0794  0.2343   \n",
               "\n",
               "      B04     B08     B02  Class  \n",
-              "0  0.0277  0.1826  0.0184      1  \n",
-              "1  0.0291  0.1619  0.0240      1  \n",
-              "2  0.0186  0.1244  0.0157      1  \n",
-              "3  0.0384  0.1885  0.0216      1  "
+              "0  0.0332  0.1927  0.0174      1  \n",
+              "1  0.0311  0.1583  0.0228      1  \n",
+              "2  0.0447  0.1555  0.0257      1  \n",
+              "3  0.0422  0.2233  0.0298      1  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4c123ef6-8f95-4d28-a41a-347bbf4c65c0\">\n",
+              "  <div id=\"df-9b2344c7-fe3b-4fc0-b5af-81290950d42c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -527,72 +526,72 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0.0070</td>\n",
-              "      <td>0.1489</td>\n",
-              "      <td>0.1105</td>\n",
-              "      <td>0.1698</td>\n",
-              "      <td>0.0726</td>\n",
-              "      <td>0.0368</td>\n",
-              "      <td>0.1884</td>\n",
-              "      <td>0.0554</td>\n",
-              "      <td>0.1860</td>\n",
-              "      <td>0.0277</td>\n",
-              "      <td>0.1826</td>\n",
-              "      <td>0.0184</td>\n",
+              "      <td>0.0083</td>\n",
+              "      <td>0.1495</td>\n",
+              "      <td>0.1162</td>\n",
+              "      <td>0.1744</td>\n",
+              "      <td>0.0837</td>\n",
+              "      <td>0.0307</td>\n",
+              "      <td>0.2035</td>\n",
+              "      <td>0.0622</td>\n",
+              "      <td>0.2039</td>\n",
+              "      <td>0.0332</td>\n",
+              "      <td>0.1927</td>\n",
+              "      <td>0.0174</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.0220</td>\n",
-              "      <td>0.1342</td>\n",
-              "      <td>0.1121</td>\n",
-              "      <td>0.1552</td>\n",
-              "      <td>0.0678</td>\n",
-              "      <td>0.0364</td>\n",
-              "      <td>0.1849</td>\n",
-              "      <td>0.0606</td>\n",
-              "      <td>0.1715</td>\n",
-              "      <td>0.0291</td>\n",
-              "      <td>0.1619</td>\n",
-              "      <td>0.0240</td>\n",
+              "      <td>0.0156</td>\n",
+              "      <td>0.1344</td>\n",
+              "      <td>0.0986</td>\n",
+              "      <td>0.1516</td>\n",
+              "      <td>0.0726</td>\n",
+              "      <td>0.0374</td>\n",
+              "      <td>0.1633</td>\n",
+              "      <td>0.0532</td>\n",
+              "      <td>0.1664</td>\n",
+              "      <td>0.0311</td>\n",
+              "      <td>0.1583</td>\n",
+              "      <td>0.0228</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.0078</td>\n",
-              "      <td>0.1041</td>\n",
-              "      <td>0.0810</td>\n",
-              "      <td>0.1176</td>\n",
-              "      <td>0.0499</td>\n",
-              "      <td>0.0260</td>\n",
-              "      <td>0.1347</td>\n",
-              "      <td>0.0421</td>\n",
-              "      <td>0.1301</td>\n",
-              "      <td>0.0186</td>\n",
-              "      <td>0.1244</td>\n",
-              "      <td>0.0157</td>\n",
+              "      <td>0.0178</td>\n",
+              "      <td>0.1115</td>\n",
+              "      <td>0.1595</td>\n",
+              "      <td>0.1368</td>\n",
+              "      <td>0.0771</td>\n",
+              "      <td>0.0339</td>\n",
+              "      <td>0.1763</td>\n",
+              "      <td>0.0952</td>\n",
+              "      <td>0.1741</td>\n",
+              "      <td>0.0447</td>\n",
+              "      <td>0.1555</td>\n",
+              "      <td>0.0257</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.0124</td>\n",
+              "      <td>0.0262</td>\n",
+              "      <td>0.1883</td>\n",
               "      <td>0.1512</td>\n",
-              "      <td>0.1283</td>\n",
-              "      <td>0.1726</td>\n",
-              "      <td>0.0845</td>\n",
-              "      <td>0.0367</td>\n",
-              "      <td>0.1936</td>\n",
-              "      <td>0.0707</td>\n",
-              "      <td>0.1981</td>\n",
-              "      <td>0.0384</td>\n",
-              "      <td>0.1885</td>\n",
-              "      <td>0.0216</td>\n",
+              "      <td>0.2120</td>\n",
+              "      <td>0.0973</td>\n",
+              "      <td>0.0516</td>\n",
+              "      <td>0.2361</td>\n",
+              "      <td>0.0794</td>\n",
+              "      <td>0.2343</td>\n",
+              "      <td>0.0422</td>\n",
+              "      <td>0.2233</td>\n",
+              "      <td>0.0298</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4c123ef6-8f95-4d28-a41a-347bbf4c65c0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b2344c7-fe3b-4fc0-b5af-81290950d42c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -643,12 +642,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4c123ef6-8f95-4d28-a41a-347bbf4c65c0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9b2344c7-fe3b-4fc0-b5af-81290950d42c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4c123ef6-8f95-4d28-a41a-347bbf4c65c0');\n",
+              "          const element = document.querySelector('#df-9b2344c7-fe3b-4fc0-b5af-81290950d42c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -711,7 +710,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L38KHzA3_TgT",
-        "outputId": "5261d5d2-e87d-4879-f5a2-a8e2c360e0d6"
+        "outputId": "0eeb40c3-9a5b-4dbc-a51b-d846beafdbc8"
       },
       "execution_count": 9,
       "outputs": [
@@ -992,7 +991,7 @@
       "metadata": {
         "id": "ERD0UQLnkjeX"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1013,10 +1012,25 @@
         "    print('{} Test Accuracy: {}'.format(pipe_dict[i], model.score(X_test, y_test)))"
       ],
       "metadata": {
-        "id": "ZyXttkxekjUC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZyXttkxekjUC",
+        "outputId": "520565b0-7be1-46f5-de6d-a78c8745ad32"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "StandardScaler Test Accuracy: 0.6147822222222222\n",
+            "MinMaxScaler Test Accuracy: 0.6136177777777778\n",
+            "MaxAbsScaler Test Accuracy: 0.6133955555555556\n",
+            "RobustScaler Test Accuracy: 0.6144\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
