--- a/Notebooks/GDAL_Example.ipynb
+++ b/Notebooks/GDAL_Example.ipynb
@@ -20,10 +20,7 @@
     "from osgeo import gdal\n",
     "from affine import Affine\n",
     "\n",
-    "from scipy.ndimage import gaussian_filter, median_filter\n",
-    "from skimage import feature\n",
-    "\n",
-    "from copy import deepcopy"
+    "from skimage import feature"
    ]
   },
   {
@@ -128,10 +125,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.1 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.1"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
